bump memory to test JVMs