@@ -96,6 +96,7 @@ sourceSets {
 test {
     forkEvery = 30
     maxParallelForks = 4
+    jvmArgs '-server','-Xmx1024M', '-Xms64M', '-XX:PermSize=32m','-XX:MaxPermSize=256m'
 }
 
 //test {
